Detalles en 9-1. Iconos en definiciones

--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -27,5 +27,5 @@ $A = \set{1,2,3}$
 % Contribuciones
 \begin{aportes}
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \faIcon{github}}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
