--- a/1-guia/ejercicios-1/ej-9-1.tex
+++ b/1-guia/ejercicios-1/ej-9-1.tex
@@ -36,9 +36,9 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
         Ya está casi terminado, pero juntar los cables con esta info te obliga a entender lo que se está intentando hacer.\par
         \textit{Fin nota que puede ser útil:}\par
 
-        Si el conjunto de un elemento $\set{x}$ está en $\partes(B)$ entonces por la definición
+        Si el conjunto $\set{x}$ está en $\partes(B)$ entonces por la definición
         del conjunto de partes el elemento $x$ tiene que estar en $B$.\par
-        Y esto es un absurdo, porque arranqué diciendo en $\llamada1$ que $x \notin B$ y ahora digo que $x \en B$. Absurdo $\skull$.\par
+        Esto es un absurdo, porque arranqué diciendo en $\llamada1$ que $x \notin B$ y ahora que $x \en B$. Absurdo $\skull$.\par
         Como mi supuesto resulto falso, debido a la lógica que está en las \hyperlink{teoria-1:absurdo}{notas teóricas sobre mostrar por absurdo} concluyo que:
         $$
           \boxed{\partes(A) \subseteq \partes(B) \entonces A \subseteq B}\Tilde
@@ -52,7 +52,7 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
         es un conjunto que cumple que $S \subseteq A$ por la definición del conjunto $\partes(A)$.
         Si todo elemento $S$ cumple que $S \subseteq A$ por \purple{hipótesis} también tiene que estar en $B$.
 
-        \textit{Nota que puede ser útil:} click acá\par
+        \textit{Nota que puede ser útil:}\par
         Terminá lo que falta de esta parte de la demostración sin ver como sigue y después comparás
         .\par
         \textit{Fin nota que puede ser útil:}\par\medskip
@@ -76,5 +76,5 @@ Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en
 % Contribuciones
 \begin{aportes}
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \faIcon{github}}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
