--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -99,7 +99,7 @@
   {\color{red!80!black}{\faIcon{flushed}... hay que hacerlo! \faIcon{sad-cry}}}\par
   {\color{black!70!white}
     \small Si querés mandarlo: Telegram $\to$ \href{\dirTelegram}{\small\faIcon{telegram}},
-    o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{\small \faIcon{github}}.
+    o  mejor aún si querés subirlo en \LaTeX $\to$ \href{\dirRepo}{\small \github}.
   }\par
 }
 
@@ -309,3 +309,7 @@
 \def\justDoIt{https://www.youtube.com/watch?v=ZXsQAXx_ao0}
 \def\dontWorryAboutAThing{https://www.youtube.com/watch?v=4k2PJFPu57Y}
 \def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
+
+
+%%% Iconos más usados
+\def\github{\faIcon{github}}
