--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -17,7 +17,7 @@
 \fancyhead[R]{Página \thepage} %% encabezado derecho
 
 \fancyfoot[EL]{
-	\href{\dirRepo}{\small \faIcon{github}
+	\href{\dirRepo}{\small\github
 		¡Aportá! Correcciones, subiendo ejercicios,
 		\yellow{\FiveStar} al repo, críticas, todo sirve.}
 }    % pie izquierdo pares
