--- a/macros/qr.tex
+++ b/macros/qr.tex
@@ -4,13 +4,14 @@
   \texttt{\tiny#1}
 }
 %%% FIN MACRO LOCAL
+\thispagestyle{empty}
 
 \vspace*{\fill}
 \noindent\makebox[\textwidth]{
   \begin{minipage}{0.7\textwidth}
     \centering
 
-    El repo en \href{\dirRepo}{github\faIcon{github}} para
+    El repo en \href{\dirRepo}{github\github} para
     descargar las guías con los últimos updates.\par\medskip
 
     \qrWeb{\dirRepo}
