add aportes ej-4-1

--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -29,3 +29,9 @@
         $$
 \end{enumerate}
 
+% Contribuciones
+\begin{aportes}
+  %\aporte{url}{nombre icono}
+  \item \aporte{\dirRepo}{Nad Garraz \github}
+  \item \aporte{https://www.instagram.com/fransureda_?igsh=MTFubXdwajZtZzMwaA==}{Francisco Sureda \instagram}
+\end{aportes}
