--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -147,6 +147,7 @@
 \newcommand{\yellow}[1]{\textcolor{YellowOrange}{#1}}
 \newcommand{\magenta}[1]{\textcolor{magenta}{#1}}
 \newcommand{\purple}[1]{\textcolor{purple}{#1}}
+\newcommand{\rosa}[1]{\textcolor{pink}{#1}}
 \newcommand{\transparente}[1]{\color[rgb]{1,1,1,0.5}{#1}}
 
 % Conjuntos entre llaves y paréntesis
@@ -235,7 +236,8 @@
 \newenvironment{aportes}{
 \vspace{10pt}
   \tt\footnotesize
-  Visitá los repos y estrellalos \yellow{\FiveStar}! Gracias por tu aporte:
+  Visitá los repos, perfiles y estrellalos
+  \yellow{\FiveStar}, likealos \blue{\faIcon{thumbs-up}}, o \textit{algo lindo} \rosa{\faIcon{heart}}! Gracias por tu aporte:
 \vspace{-10pt}
   \begin{multicols}{3}
   \begin{itemize}[label={\tiny\yellow{\faIcon{medal}}}]
@@ -313,3 +315,4 @@
 
 %%% Iconos más usados
 \def\github{\faIcon{github}}
+\def\instagram{\faIcon{instagram}}
