--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -26,6 +26,7 @@ $A = \set{1,2,3}$
 
 % Contribuciones
 \begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
 \end{aportes}
