--- a/5-guia/ejercicios-5-extra/ej-extra-9-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-9-5.tex
@@ -3,7 +3,7 @@ Determinar todos los $a \en \enteros$ que satisfacen simultáneamente
 $$
   \llave{l}{
     \congruencia{3a}{12}{24} \\
-    \congruencia{a}{10}{30} \\
+    \congruencia{a}{10}{30}  \\
     \congruencia{20a}{50}{125}
   }
 $$
@@ -16,7 +16,7 @@ $$
   \llave{l}{
     \congruencia{3a}{12}{24}
     \sisolosi
-    \congruencia{a}{4}{8}  \\
+    \congruencia{a}{4}{8}   \\
     \congruencia{a}{10}{30} \\
     \congruencia{20a}{50}{125}
     \sisolosi
@@ -30,13 +30,13 @@ $$
 
 $$
   \llave{l}{
-    \congruencia{3a}{12}{24}\\
-    \congruencia{a}{10}{30} \\
+    \congruencia{3a}{12}{24} \\
+    \congruencia{a}{10}{30}  \\
     \congruencia{20a}{50}{125}
   }
   \leftrightsquigarrow
   \llave{l}{
-    \congruencia{a}{4}{8}  \\
+    \congruencia{a}{4}{8}   \\
     \congruencia{a}{10}{30} \\
     \congruencia{a}{15}{25}
   }
@@ -44,13 +44,13 @@ $$
 Todavía no tenemos los divisores coprimos 2 a 2. Ahora \textit{\underline{quebramos}}:
 $$
   \llave{l}{
-    \congruencia{a}{4}{8}\magenta{\Tilde}  \\
+    \congruencia{a}{4}{8}\magenta{\Tilde}            \\
     \congruencia{a}{10}{30}
     \leftrightsquigarrow
     \llave{l}{
-      \congruencia{a}{0}{2} \magenta{\Tilde}\\
-      \congruencia{a}{1}{3}\\
-      \congruencia{a}{0}{5}\blue{\Tilde}\\
+      \congruencia{a}{0}{2} \magenta{\Tilde} \\
+      \congruencia{a}{1}{3}                  \\
+      \congruencia{a}{0}{5}\blue{\Tilde}     \\
     } \\
     \congruencia{a}{15}{25} \blue{\Tilde}
   }
@@ -62,7 +62,7 @@ Me quedo con las ecuaciones de \textit{mayor divisor}, dado
 que sino obtendría soluciones de más.
 $$
   \llave{l}{
-    \congruencia{a}{4}{8} \\
+    \congruencia{a}{4}{8}   \\
     \congruencia{a}{10}{30} \\
     \congruencia{a}{15}{25}
   }
@@ -75,10 +75,10 @@ $$
 $$
 
 Ahora logramos tener el sistema con los divisores coprimos 2 a 2.
-Por T\faIcon{cannabis}R este sistema va a tener una solución particular
+Por \href{\chinito}{teorema chino del resto} este sistema va a tener una solución particular
 $
-  x_0 \ / \  0 \leq x_0 < \ub{3 \cdot 8 \cdot 25}{600}
-$ \\
+  x_0 \text{ con }  0 \leq x_0 < \ub{3 \cdot 8 \cdot 25}{600}
+$\par
 
 $
   \llave{l}{
@@ -89,7 +89,7 @@ $
     \sii
     \congruencia{\magenta{k}}{0}{3}
     \sii
-    \magenta{k} = 3\green{j}\\
+    \magenta{k} = 3\green{j}     \\
     \flecha{reemplazo \magenta{$k$}}[en $a = 8\magenta{k} + 4$]
     a = 24\green{j} + 4
     \flecha{reemplazo a $a$}[en $\llamada3$]
@@ -97,7 +97,7 @@ $
     \sii
     \congruencia{\green{j}}{14}{25}
     \sii
-    \green{j} = 25\yellow{h} +14\\
+    \green{j} = 25\yellow{h} +14 \\
     \flecha{reemplazo \green{$j$}}[en $a = 24\green{j} + 4$]
     a = 600\yellow{h} + 340
     \sii
