--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -310,9 +310,12 @@
 \def\videosPracticas{https://www.youtube.com/playlist?list=PLEtdiZTXB5c5e9BOcqbnROTHevanNfz6U}
 \def\justDoIt{https://www.youtube.com/watch?v=ZXsQAXx_ao0}
 \def\dontWorryAboutAThing{https://www.youtube.com/watch?v=4k2PJFPu57Y}
+\def\zanguango{https://www.youtube.com/watch?v=Uzcl2gNL3zg&t=10s}
 \def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
 
 
 %%% Iconos más usados
 \def\github{\faIcon{github}}
 \def\instagram{\faIcon{instagram}}
+\def\tiktok{\faIcon{tiktok}}
+\def\linkedin{\faIcon{linkedin}}
