Fix typo in disclaimer

--- a/macros/disclaimer.tex
+++ b/macros/disclaimer.tex
@@ -1,6 +1,6 @@
 \thispagestyle{empty}
 \underline{Disclaimer:}\par
-Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \Bigskip
+Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \bigskip
 
 \vspace*{\fill}
 \noindent\makebox[\textwidth]{
