--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -11,7 +11,7 @@
   \end{multicols}
 \end{enunciado}
 
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\roman*]
 
   \item
         \textit{Proposición: } $ p(n) : \sumatoria{i = 1}{n} (-1)^{i + 1} i^2 = \frac{(-1)^{n+1} n (n+1)}{2} \paratodo n \en \naturales$\par
@@ -32,8 +32,20 @@
         Dado que $p(1),\, p(k),\, p(k+1)$ resultaron verdaderas, por criterio de inducción también lo es $p(n) \en \naturales$
 
   \item
-        \hacer
-
+    \textit{Proposición: } $ p(n) : \sumatoria{i=1}{n} (2i+1)3^{i - 1} = n3^n \paratodo n \en \naturales$\par
+    \textit{Caso base: } $p(1) : \sumatoria{1}{i=1} (2i+1)3^{i - 1} = \frac{1*2^1}{(1+1)(1+2)} = \frac{2}{6} = \frac{1}{3} = \frac{2^2 - 3}{1 + 2} \entonces p(1) $es verdadera$ \Tilde$\par
+    \textit{Paso inductivo: } \text{Asumo }$p(k):  \sumatoria{i=1}{n} (2i+1)3^{i - 1} = n3^n \text{ como verdadera.}\\
+    \entonces
+    p(n+1) : \text{quiero ver que }
+    \sumatoria{1}{n+1}(2i+1)3^{i - 1} = (n+1)3^{n+1} \text{ también lo sea.}$ \\
+    $ 
+    \sumatoria{1}{n+1}(2i+1)3^{i - 1} = \sumatoria{1}{n}(2i+1)3^{i - 1} + (2(n+1)+1)3^{(n+1) - 1} \\
+    \igual{\magenta{HI}} n3^n + 3^n (2n + 3)
+    = 3^n * n + 3^n * 2n + 3^{n+1}
+    = 3^{n+1} * n + 3^{n+1} \\
+    \flecha{}[fáctor cómun] 3^{n+1} * (n + 1) \Tilde$ \\
+    Dado que $p(1),\, p(k),\, p(k+1)$ resultaron verdaderas, por criterio de inducción también lo es $p(n) \en \naturales$
+    \par
   \item
         \hacer
 
