--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -33,7 +33,7 @@
 
   \item
     \textit{Proposición: } $ p(n) : \sumatoria{i=1}{n} (2i+1)3^{i - 1} = n3^n \paratodo n \en \naturales$\par
-    \textit{Caso base: } $p(1) : \sumatoria{1}{i=1} (2i+1)3^{i - 1} = \frac{1*2^1}{(1+1)(1+2)} = \frac{2}{6} = \frac{1}{3} = \frac{2^2 - 3}{1 + 2} \entonces p(1) $es verdadera$ \Tilde$\par
+    \textit{Caso base: } $p(1) : \sumatoria{1}{i=1} (2i+1)3^{i - 1} = \frac{1*2^1}{(1+1)*(1+2)} = \frac{2}{6} = \frac{1}{3} = \frac{2^2 - 3}{1 + 2} \entonces p(1) $es verdadera$ \Tilde$\par
     \textit{Paso inductivo: } \text{Asumo }$p(k):  \sumatoria{i=1}{n} (2i+1)3^{i - 1} = n3^n \text{ como verdadera.}\\
     \entonces
     p(n+1) : \text{quiero ver que }
