ADD contributions to ej-7.2.tex

--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -173,3 +173,10 @@
 
         Como $p(1),\, p(k) \ytext p(k+1)$ son verdaderas por el principio de inducción $p(n)$ es verdadera $\paratodo n \en \naturales$.
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/misProyectosPropios}{Iñaki Frutos \github}
+\end{aportes}
