--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -235,6 +235,7 @@
 
 \newenvironment{aportes}{
 \vspace{10pt}
+\begin{minipage}{1\linewidth}
   \tt\footnotesize
   Visitá los repos, perfiles y estrellalos
   \yellow{\FiveStar}, likealos \blue{\faIcon{thumbs-up}}, o \textit{algo lindo} \rosa{\faIcon{heart}}! Gracias por tu aporte:
@@ -244,6 +245,7 @@
       }{
     \end{itemize}
   \end{multicols}
+\end{minipage}
 }
 
 %=======================================================
