--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -1,5 +1,14 @@
 \textit{\hypertarget{teoria-1:basicos-conjuntos}{Básicos sobre conjuntos y coso: }}
 \begin{itemize}[label={\tiny\faIcon{smile}}]
+  \item \textit{Conjunto de Partes $\partes$}:\par
+        Sea $A$ un conjunto. El \textit{conjunto de partes} de $A$, que se nota $\partes(A)$, es el
+        conjunto formado por todos los subconjuntos de $A$, o sea el conjunto cuyos \textit{elementos} son
+        los subconjuntos de $A$. Es decir
+        $$
+          \partes(A) = \set{B : B \subseteq A} \text{ o también } B \en \partes{A} \sisolosi B \subseteq A.
+        $$
+        Por ejemplo: Si $A = \set{1,2,3}$, $\partes(A) = \set{\vacio, \set{1},\set{2},\set{3},\set{1,2}, \set{1,3}, \set{2,3},\set{1,2,3}}$
+
   \item \textit{ Las uniones e intersecciones de conjuntos conmutan:}
         $$
           \begin{array}{c}
