--- a/2-guia/ejercicios-2/ej-4-2.tex
+++ b/2-guia/ejercicios-2/ej-4-2.tex
@@ -20,22 +20,33 @@
           \red{-1 + 1} + \sumatoria{i=1}{n} q^i =
           \red{-1} + \sumatoria{i = \red{0}}{n} q^i =
           \llave{lll}{
-            n + 1 \red{-1} = n & \text{si} & q = 1\\
-                \frac{q^{n+1}-1}{q-1} \red{-1} = \ub{\frac{q^{n+1} - q}{q-1}}{\llamada1 \sumatoria{k = \red{1}}{n} q^i} & \text{si} & q \distinto 1
+            n + 1 \red{-1} = n                                                                                                       & \text{si} & q = 1         \\
+            \frac{q^{n+1}-1}{q-1} \red{-1} = \ub{\frac{q^{n+1} - q}{q-1}}{\llamada1 \sumatoria{k = \red{1}}{n} q^i} & \text{si} & q \distinto 1
           }$
 
-  \item $\sumatoria{i=0}{n} q^{2i} =
-          \llave{l}{
-            = \ub{q^2 + q^4 + \cdots + (q^{n-1})^2 + q^{2n}}{\text{n elementos}} = n  \text{ si } q = \pm 1\\
-                = \ub{(q^2)^1 + (q^2)^2 + \cdots + (q^2)^{n-1} + (q^2)^n}{\text{n elementos}} \igual{$\scriptstyle\llamada1$}
-                \frac{(q^2)^{n+1} - q^2}{q^2 - 1}  \text{ si } q \distinto \pm 1
+  \item $\sumatoria{i=0}{n} q^{2i} \igual{\red{!}}
+          1 + \sumatoria{i=\magenta{1}}{n} q^{2i} =
+          \llave{lll}{
+            \scriptstyle
+            1 + \ub{q^2 + q^4 + \cdots + (q^{n-1})^2 + q^{2n}}{\text{n elementos}} = n + 1 & \text{ si } & q = \pm 1         \\
+            \scriptstyle
+            1 + \ub{(q^2)^1 + (q^2)^2 + \cdots + (q^2)^{n-1} + (q^2)^n}{\text{n elementos}} \igual{$\scriptstyle\llamada1$}
+            \frac{(q^2)^{n+1} - q^2}{q^2 - 1} + 1 =
+            \frac{q^{2(n+1)} - 1}{q^2 - 1}                                                                               & \text{ si } & q \distinto \pm 1
           }
-          $
+        $
   \item $
           \sumatoria{i=1}{2n} q^i \igual{?}
-                \llave{l}{
-                        2n \text{ si } q = 1\\ 
-                        \frac{q^{2n-1} - q}{q-1} \text{ si } q \distinto 1
-                }
+          \llave{l}{
+            2n \text{ si } q = 1 \\
+            \frac{q^{2n-1} - q}{q-1} \text{ si } q \distinto 1
+          }
         $
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
