fix 4-2iii underbrace size

--- a/2-guia/ejercicios-2/ej-4-2.tex
+++ b/2-guia/ejercicios-2/ej-4-2.tex
@@ -28,11 +28,11 @@
           1 + \sumatoria{i=\magenta{1}}{n} q^{2i} =
           \llave{lll}{
             \scriptstyle
-            1 + \ub{q^2 + q^4 + \cdots + (q^{n-1})^2 + q^{2n}}{\text{n elementos}} = n + 1 & \text{ si } & q = \pm 1         \\
+            1 + \underbrace{\scriptstyle q^2 + q^4 + \cdots + (q^{n-1})^2 + q^{2n}}_{\text{n elementos}} = n + 1 & \text{ si } & q = \pm 1         \\
             \scriptstyle
-            1 + \ub{(q^2)^1 + (q^2)^2 + \cdots + (q^2)^{n-1} + (q^2)^n}{\text{n elementos}} \igual{$\scriptstyle\llamada1$}
+            1 + \underbrace{\scriptstyle(q^2)^1 + (q^2)^2 + \cdots + (q^2)^{n-1} + (q^2)^n}_{\text{n elementos}} \igual{$\scriptscriptstyle\llamada1$}
             \frac{(q^2)^{n+1} - q^2}{q^2 - 1} + 1 =
-            \frac{q^{2(n+1)} - 1}{q^2 - 1}                                                                               & \text{ si } & q \distinto \pm 1
+            \frac{q^{2(n+1)} - 1}{q^2 - 1}                                                                                                     & \text{ si } & q \distinto \pm 1
           }
         $
   \item $
