--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -38,7 +38,6 @@
 
         Hemos probado el caso base y el paso inductivo. Concluimos que $\paratodo n \en \naturales, \ P(n): V$.
 
-
   \item $P(n): 3^n \geq n^3, \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
           \item Caso base, $n = 1$:
@@ -79,7 +78,6 @@
           \sisolosi n(\sqrt[3]{3} - 1) \geq 1 \sisolosi  n \geq \frac{1}{\sqrt[3]{3} - 1}
           \approx 2.6 \sisolosi n \geq 3$ \\
         $\therefore 3n^3 \geq (n+1)^3 \sisolosi n \geq 3$
-
 
   \item $P(n):  \sumatoria{i=1}{n} \frac{n+i}{1+i} \leq 1 + n(n-1), \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
@@ -200,7 +198,6 @@
           -2n + 4 & \leq 0, \text{ si } n \geq 2 \entonces -2n + 4 \leq 1, \text{ si } n \geq 2
         \end{align*}
 
-
   \item $P(n):  \sumatoria{i=1}{2^n} \frac{1}{2i-1} > \frac{n+3}{4}, \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
           \item Caso base, $n = 1$:
@@ -257,7 +254,6 @@
           \entonces                          & \# Elementos = 2^n
         \end{align*}
 
-
   \item $P(n): \sumatoria{i=1}{n} \frac{1}{i!} \leq 2 - \frac{1}{2^{n-1}}, \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
           \item Caso base, $n = 1$:
@@ -309,7 +305,6 @@
         \end{enumerate}
 
         Hemos probado el caso base y el paso inductivo. Concluimos que $\paratodo n \en \naturales, \ Q(n): V$.
-
 
   \item $P(n):  \productoria{i=1}{n}\frac{4i-1}{n+i} \geq 1, \ n \en \naturales$.
         \begin{enumerate}[label=\arabic*)]
@@ -376,3 +371,10 @@
           2 \leq 3 \entonces 4n + 2 \leq 4n + 3 \entonces \frac{4n+2}{4n+3} \leq 1
         \end{align*}
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{\neverGonnaGiveYouUp}{Tu vieja \youtube}
+\end{aportes}
