--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -314,6 +314,7 @@
 \def\dontWorryAboutAThing{https://www.youtube.com/watch?v=4k2PJFPu57Y}
 \def\zanguango{https://www.youtube.com/watch?v=Uzcl2gNL3zg&t=10s}
 \def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
+\def\neverGonnaGiveYouUp{https://www.youtube.com/watch?v=dQw4w9WgXcQ}
 
 
 %%% Iconos más usados
@@ -321,3 +322,4 @@
 \def\instagram{\faIcon{instagram}}
 \def\tiktok{\faIcon{tiktok}}
 \def\linkedin{\faIcon{linkedin}}
+\def\youtube{\faIcon{youtube}}
