--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -1,6 +1,6 @@
 % Info para armar título.
 
-\title{Álgebra I\\ Práctica \guia\ Resuelta} % título
+\title{Apunte único: Álgebra I} % título
 \author{Por alumnos de Álgebra I\\
 	Facultad de Ciencias Exactas y Naturales \\
 	UBA} % autores y lugar
