--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -29,6 +29,7 @@
 \usepackage{fontawesome5} % fuentes "extras"
 \usepackage{venndiagram} % Para los diagramas de Venn
 \usepackage{qrcode} % genera código qr
+\usepackage{xspace}% para control de espacios en macros
 %\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
