--- a/1-guia/ejercicios-1/ej-16-1.tex
+++ b/1-guia/ejercicios-1/ej-16-1.tex
@@ -8,4 +8,50 @@
   \end{enumerate}
 \end{enunciado}
 
-\hacer
+\begin{enumerate}[label=\roman*)]
+  \item
+        Para demostrar igualdad de conjuntos habría que probar la doble inclusión, es decir:
+
+        $$
+          \begin{array}{l}
+            (A \union B) \times C \magenta{\subseteq} (A \times C) \union (B \times C) \\
+            (A \times C) \union (B \times C) \magenta{\subseteq} (A \union B) \times C
+          \end{array}
+        $$
+        O bien si podemos conectar los pasos con "$\sisolosi$". En este caso se usa el de los "$\sisolosi$" y mucho
+        de las \hyperlink{teoria-1:conjuntos-basicos}{definiciones que podés ver acá en las notas teóricas}:\par
+        Sea el par $(x,y)$
+        $$
+          \begin{array}{c}
+            (x,y) \en (A \union B) \times C)
+            \Sii{def prod.}[Cartesiano]
+            x \en (A \union B) \ytext y \en C
+            \Sii{def}[$\union$]
+            (x \en A \otext x \en  B  )\ytext x \en C
+          \end{array}
+        $$
+        Si está en $A$ o en $B$ y seguro está en $C$, entonces $x$ tiene que estar en $A \inter C$ o bien en $B \inter C$,
+        que no es otra cosa que distribuir el "y" con el "o":
+        $$
+          \Sii{distribución}
+          (x \en A  \ytext x \en C) \otext (x \en  B \ytext x \en C)
+          \Sii{\red{!}}
+          (x,y) \en (A \times C) \otext (x,y) \en (B\times C)
+        $$
+        Ese paso del \red{!} es la definición de producto cartesiano como al principio y se concluye que:
+        $$
+          (A \union B) \times C \igual{\magenta{\Tilde}}
+          (A \times C) \union (B\times C)
+        $$
+  \item \hacer
+  \item \hacer
+  \item \hacer
+\end{enumerate}
+
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
