--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -48,7 +48,7 @@
         Sabemos que $\magenta{(A \triangle C) \subseteq (A \triangle B) \union (B \triangle C)}$, es decir que $(A \triangle C)$
         es un subconjunto de un conjunto que \underline{no} tiene al conjunto $\set{1,2,3}$. Se concluye que
         $$
-          (A \inter B) \inter \set{1,2,3} = \vacio.
+          (A \triangle C) \inter \set{1,2,3} = \vacio.
         $$
         La relación $\relacion$ es transitiva.\par
 
@@ -79,7 +79,7 @@
         $$
         La clase $\clase{A}$:
         $$
-          \clase{A} = \set{X \en P \big/ \set{1,2,3} \subseteq X } 
+          \clase{A} = \set{X \en P \big/ \set{1,2,3} \subseteq X }
           \text{ o también }
           \clase{A} = \set{ \set{1,2,3} \union X \text{ con } X \en \partes\set{4,5,6,7,8,9,10} }\Tilde
         $$
