--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -84,3 +84,12 @@
           \clase{A} = \set{ \set{1,2,3} \union X \text{ con } X \en \partes\set{4,5,6,7,8,9,10} }\Tilde
         $$
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/gusvianadev}{Gus Viana \github}
+\end{aportes}
