salto de linea ejercicio 7-2

--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -30,8 +30,8 @@
         $$
           A \relacion B \sisolosi \ub{(A \triangle B)}{ = B \triangle A} \inter \set{1,2,3} = \vacio
         $$
-        Como la diferencia simétrica es conmutativa, $A
-          triangle B = B \triangle A$ se tiene que la relación $\relacion$ es simétrica también.
+        Como la diferencia simétrica es conmutativa,
+        $A \triangle B = B \triangle A$ se tiene que la relación $\relacion$ es simétrica también.
 
         \textit{Transitiva: ¿$A \relacion B \ytext B \relacion C \entonces A \relacion C$?}
         $$
@@ -52,7 +52,14 @@
         $$
         La relación $\relacion$ es transitiva.\par
 
-        Como la relación es \textit{reflexiva, simétrica  y transitiva} es de equivalencia.
+        Como la relación es \textit{reflexiva, simétrica  y transitiva} es de equivalencia \Tilde.\par\bigskip
+
+        \textit{Antisimétrica: $\paratodo A, B \en P si A \relacion B y B \relacion A \entonces A = B$}\par
+        Se podría encontrar un contraejemplo: Ya dijimos que $A \triangle B = B \triangle A$. No debería ser muy complicado encontrar un $A$ y un $B$
+        distintos que cumplan
+        $$
+          A \relacion B \ytext B\relacion A
+        $$
 
   \item
         La clase de equivalencia de $A = \set{1,2,3}$ va a estar formada por $A$ y por todos los conjuntos $X \en P$
