--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -177,7 +177,7 @@
         $$
         \textit{Nota que puede ser de utilidad:}
         Esta productoria tiene a la $n$ en el término general. Cuando pasa esto en el ejercicio, abrir la sumatoria
-        para acomodar los factores y así formar la HI, suele ser el camino a seguir.
+        para acomodar los factores y así formar la HI, suele ser el camino a seguir.\par
         \textit{Fin nota que puede ser de utilidad}
 
         $$
