--- a/1-guia/ejercicios-1/ej-16-1.tex
+++ b/1-guia/ejercicios-1/ej-16-1.tex
@@ -54,4 +54,5 @@
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/koopardo}{Marcos Zea \github}
 \end{aportes}
