--- a/2-guia/ejercicios-2/ej-10-2.tex
+++ b/2-guia/ejercicios-2/ej-10-2.tex
@@ -376,5 +376,6 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{\neverGonnaGiveYouUp}{Tu vieja \youtube}
+  \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+  \item \aporte{\dirRepo}{nad-garraz \github}
 \end{aportes}
