--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -98,3 +98,10 @@
           \frac{1}{2(n+1)-1} - \frac{1}{2\cdot 1-1}
         \end{align*}
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+\end{aportes}
