--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -53,7 +53,7 @@
     linkcolor=blue,
     %filecolor=magenta,
     urlcolor=OliveGreen!90!black,
-    pdftitle={Álgebra I - Resuelta, sueltísima},
+    pdftitle={Apunté Único de Álgebra I},
     pdfauthor={Por los alumnos y exalumnos de Álgebra I}
     }
 \urlstyle{same}
