--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -107,10 +107,10 @@
 
         $
           \sumatoria{i=1}{n+1} \frac{i2^i}{(i + 1)(i+2)}
-          = \sumatoria{i=1}{n} \frac{i2^i}{(i + 1)(i+2)} + \frac{i2^{n+1}}{((n+1) + 1)((n+1)+2)}
-          \igual{\magenta{HI}} \frac{2^{n+1}}{n+2} -1 + \frac{i2^{n+1}}{((n+1) + 1)((n+1)+2)}$\\
+          = \sumatoria{i=1}{n} \frac{i2^i}{(i + 1)(i+2)} + \frac{(n+1)2^{n+1}}{((n+1) + 1)((n+1)+2)}
+          \igual{\magenta{HI}} \frac{2^{n+1}}{n+2} -1 + \frac{(n+1) 2^{n+1}}{((n+1) + 1)((n+1)+2)}$\\
 
-        $\text{Si } \frac{2^{n+1}}{n+2} -1 + \frac{i2^{n+1}}{((n+1) + 1)((n+1)+2)} = \frac{2^{(n+1)+1}}{(n+1)+2} - 1\entonces
+        $\text{Si } \frac{2^{n+1}}{n+2} -1 + \frac{(n+1)2^{n+1}}{((n+1) + 1)((n+1)+2)} = \frac{2^{(n+1)+1}}{(n+1)+2} - 1\entonces
           \text{ sera verdadero}$\\
 
         \begin{subequations}
