--- a/2-guia/ejercicios-2/ej-2-2.tex
+++ b/2-guia/ejercicios-2/ej-2-2.tex
@@ -21,7 +21,7 @@ Llamo $t_1$, $t_2$ a los primeros términos y $t_{m-1}$, $t_m$ a los últimos\\
         $t_{m-1} = 2((n - 1) - 5) = 2n - 12 \quad t_m = 2(n - 5) = 2n - 10$
 
   \item $\sumatoria{i=n}{2n} \frac{1}{i(i+1)}$\par
-        $t_1 = \frac{1}{n(n + 1)} = \frac{1}{n^2 + n} \quad t_2 = \frac{1}{(n+1)((n+1) + 1)} = \frac{1}{n^2 + 3n + 1}$\par
+        $t_1 = \frac{1}{n(n + 1)} = \frac{1}{n^2 + n} \quad t_2 = \frac{1}{(n+1)((n+1) + 1)} = \frac{1}{n^2 + 3n + 2}$\par
         $t_{m-1} = \frac{1}{(2n-1)(2n-1+1)} = \frac{1}{4n^2-2n} \quad t_m = \frac{1}{2n(2n+1)} = \frac{1}{4n^2 + 2n}$
 
   \item $\sumatoria{i=1}{n} \frac{n + i}{2i}$\par
@@ -36,3 +36,11 @@ Llamo $t_1$, $t_2$ a los primeros términos y $t_{m-1}$, $t_m$ a los últimos\\
         $t_1 = \frac{n + 1}{2 - 3} = - n - 1 \quad t_2 = \frac{n + 2}{4 - 3} = n + 2$\par
         $t_{m-1} = \frac{n + (n-1)}{2(n-1) - 3} = \frac{2n - 1}{2n - 5} \quad t_m = \frac{n + n}{2n - 3} = \frac{2n}{2n - 3}$
 \end{enumerate}
+
+% Contribuciones
+\begin{aportes}
+  %% iconos : \github, \instagram, \tiktok, \linkedin
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://https://www.instagram.com/GabiEGV}{Gabriel Garcia \instagram}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+\end{aportes}
