--- a/2-guia/ejercicios-2/ej-2-2.tex
+++ b/2-guia/ejercicios-2/ej-2-2.tex
@@ -43,4 +43,5 @@ Llamo $t_1$, $t_2$ a los primeros términos y $t_{m-1}$, $t_m$ a los últimos\\
   %\aporte{url}{nombre icono}
   \item \aporte{https://https://www.instagram.com/GabiEGV}{Gabriel Garcia \instagram}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\neverGonnaGiveYouUp}{FedeMisterio \youtube}
 \end{aportes}
