aclaración en ej 7-2

--- a/2-guia/ejercicios-2/ej-7-2.tex
+++ b/2-guia/ejercicios-2/ej-7-2.tex
@@ -50,7 +50,7 @@
         $$
 
         Por lo tanto p(k+1) resulta ser verdadera también.\par
-        Si te quedaste ahí pedaleando en el aire en el \red{!!!} es solo acomodar la expresión, nada raro, algún factor común y coso... \href{\justDoIt}{power!}.
+        Si te quedaste ahí pedaleando en el aire en el \red{!!!} es solo acomodar la expresión, nada raro, algún factor común, $\ub{(-1)^2 = 1}{\text{\tiny \faIcon{meh-rolling-eyes}}}$ y coso... \href{\justDoIt}{power!}.
         Si lo hago yo es puro spoiler y no ganás nada.
 
         Dado que $p(1),\, p(k),\, p(k+1)$ resultaron verdaderas, por criterio de inducción también lo es $p(n) \en \naturales$
